@@ -3843,4 +3843,10 @@ ACE_Thread_ID::operator!= (const ACE_Thread_ID &rhs) const
   return !(*this == rhs);
 }
 
+ACE_event_t::ACE_event_t (void) :
+  name_ (0),
+  eventdata_ (0)
+{
+}
+
 ACE_END_VERSIONED_NAMESPACE_DECL
