@@ -299,11 +299,15 @@ bool test_timer (ACE_Condition_Thread_Mutex& condition_, ACE_Time_Value& waittim
       sys_time.wMinute = ACE_Utils::truncate_cast <WORD> (curdt.minute ());
       sys_time.wSecond = ACE_Utils::truncate_cast <WORD> (curdt.second ());
       sys_time.wMilliseconds = ACE_Utils::truncate_cast <WORD> (curdt.microsec () / 1000);
-      ::SetLocalTime (&sys_time);
+      if (!::SetLocalTime (&sys_time))
 # else
       curts = curtime;
-      ACE_OS::clock_settime (CLOCK_REALTIME, &curts);
+      if (ACE_OS::clock_settime (CLOCK_REALTIME, &curts) != 0)
 # endif
+        {
+          ACE_DEBUG((LM_INFO,
+                      "(%P|%t) Unable to reset OS time. Insufficient privileges or not supported.\n"));
+        }
     }
 
   ACE_DEBUG((LM_INFO,
